--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "antd": "^3.26.12",
+    "@babel/runtime": "^7.8.4",
     "classnames": "^2.2.6"
   },
   "browserslist": [
