--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
+    "babel-plugin-import": "^1.13.0",
     "father": "^2.16.0",
     "typescript": "^3.3.3"
   },
   "license": "MIT",
   "dependencies": {
+    "@ant-design/icons": "^4.0.2",
     "@babel/runtime": "^7.8.4",
+    "antd": "^4.0.0",
     "classnames": "^2.2.6"
   },
   "browserslist": [
