--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
+    "@types/react-dom": "^16.9.5",
     "babel-plugin-import": "^1.13.0",
     "father": "^2.16.0",
     "typescript": "^3.3.3"
