--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "ming-ui",
+  "name": "@zhangmmm/ming-ui",
   "version": "0.0.1",
   "description": "基于 react 的组件库",
-  "keywords": ["react", "ming-ui", "ming", "ui"],
+  "keywords": [
+    "react",
+    "ming-ui",
+    "ming",
+    "ui"
+  ],
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "authors": {
@@ -21,7 +26,8 @@
     "deploy": "father doc deploy"
   },
   "peerDependencies": {
-    "react": "16.x"
+    "react": "16.x",
+    "react-dom": "16.x"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
